Ajuste da página inicial

--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -9,8 +9,8 @@
 	<!-- Para deixar sempre em destaque, basta adicionar a classe active -->
 	<li class="nav-item">
 		<a class="nav-link" href="<%- root %>/">
-			<i class="fas fa-fw fa-tachometer-alt"></i>
-			<span>Dashboard</span>
+			<i class="fas fa-fw fa-home"></i>
+			<span>Boas-Vindas</span>
 		</a>
 	</li>
 
@@ -70,6 +70,7 @@
 		</div>
 	</li>
 
+	<!--
 	<hr class="sidebar-divider">
 
 	<div class="sidebar-heading">
@@ -146,6 +147,7 @@
 			<span>Tabelas</span>
 		</a>
 	</li>
+	-->
 
 	<hr class="sidebar-divider d-none d-md-block">
 
