Ajuste da UI e lógica de edição do questionário e dos arquétipos

--- a/views/arquetipo/editar.ejs
+++ b/views/arquetipo/editar.ejs
@@ -12,7 +12,7 @@
 
 	<div class="col-md-4">
 		<div class="form-group">
-			<label for="nomeexterno">Nome externo</label>
+			<label for="nomeexterno">Nome Externo</label>
 			<input id="nomeexterno" name="nomeexterno" maxlength="100" class="form-control" type="text"
 				spellcheck="false" value="<%=(item ? item.nomeexterno : '') %>" />
 		</div>
@@ -58,13 +58,13 @@
 </div>
 
 <div class="form-group">
-	<label for="descricaocurta">Descrição curta</label>
+	<label for="descricaocurta">Descrição Curta</label>
 	<input id="descricaocurta" name="descricaocurta" maxlength="255" class="form-control" type="text"
 		spellcheck="false" value="<%=(item ? item.descricaocurta : '') %>" />
 </div>
 
 <div class="form-group">
-	<label for="descricaocompleta">Descrição completa</label>
+	<label for="descricaocompleta">Descrição Completa</label>
 	<div id="descricaocompleta" class="d-none"><%- (item ? item.descricaocompleta : '') %></div>
 </div>
 
